# ES-App

./: README.md  enfoquesaluddb.sql
EnfoqueSaludUI/: settings.gradle.kts
EnfoqueSaludUI/app/: build.gradle.kts
EnfoqueSaludUI/app/src/main/: AndroidManifest.xml
EnfoqueSaludUI/app/src/main/res/drawable/: border_background.xml  circle_background.xml  config.xml  edittext_rounded_border.xml  home.xml  ic_comment_24.xml  ic_gear_24.xml  ic_launcher_background.xml  ic_launcher_foreground.xml  ic_logout_24.xml  logo.xml  schedule.xml  star_24.xml
EnfoqueSaludUI/app/src/main/res/layout/: activity_home.xml  activity_main.xml  activity_medic_list.xml  activity_medical_appointment.xml  activity_notifications.xml  activity_payment.xml  activity_pending_appointments.xml  activity_profile.xml  activity_record_user.xml  activity_recover_password.xml  activity_recover_password_three.xml  activity_recover_password_two.xml  activity_satisfactory_payment.xml  activity_select_day_and_hour.xml  (+7 more)
EnfoqueSaludUI/gradle/wrapper/: gradle-wrapper.properties
backend/: .env.example  .gitignore  app.py  generate.py  insert_data.py  manage.py  pyproject.toml  readme.md  requirements.txt  routes.py  utils.py
backend/controllers/: clinic.py  doctor.py  patient.py  user.py
backend/migrations/versions/: 03f7d60c3d2f_.py  07616f812796_.py  0e436b7ed64f_.py  439d1b098cc9_.py  7a5ab2045b41_.py
backend/models/: appointment.py  availability.py  clinic.py  doctor.py  invoice.py  notification.py  patient.py  payment.py  person.py  record.py  role.py  user.py
backend/services/: jwt.py
(+47 files in other folders)
